--- a/main/templates/main.html
+++ b/main/templates/main.html
@@ -101,8 +101,8 @@
     else {
         classNameString = "columns-1 sm:columns-2 lg:columns-3 gap-6 space-y-6 w-full"
         moodEntries.forEach((item) => {
-            const mood = DOMPurify.sanitize(mood);
-            const feelings = DOMPurify.sanitize(feelings);
+            const mood = DOMPurify.sanitize(item.fields.mood);
+            const feelings = DOMPurify.sanitize(item.fields.feelings);
             htmlString += `
             <div class="relative break-inside-avoid">
                 <div class="absolute top-2 z-10 left-1/2 -translate-x-1/2 flex items-center -space-x-2">
@@ -125,12 +125,12 @@
                                 <div class="flex mb-2 items-center justify-between">
                                     <div>
                                         <span class="text-xs font-semibold inline-block py-1 px-2 uppercase rounded-full text-indigo-600 bg-indigo-200">
-                                            ${mood_intensity > 10 ? '10+' : mood_intensity}
+                                            ${item.fields.mood_intensity > 10 ? '10+' : item.fields.mood_intensity}
                                         </span>
                                     </div>
                                 </div>
                                 <div class="overflow-hidden h-2 mb-4 text-xs flex rounded bg-indigo-200">
-                                    <div style="width: ${mood_intensity > 10 ? 100 : mood_intensity * 10}%;" class="shadow-none flex flex-col text-center whitespace-nowrap text-white justify-center bg-indigo-500"></div>
+                                    <div style="width: ${item.fields.mood_intensity > 10 ? 100 : item.fields.mood_intensity * 10}%;" class="shadow-none flex flex-col text-center whitespace-nowrap text-white justify-center bg-indigo-500"></div>
                                 </div>
                             </div>
                         </div>
@@ -156,6 +156,7 @@
     document.getElementById("mood_entry_cards").innerHTML = htmlString;
 }
 refreshMoodEntries();
+
 
   const modal = document.getElementById('crudModal');
   const modalContent = document.getElementById('crudModalContent');
@@ -186,7 +187,6 @@ refreshMoodEntries();
   document.getElementById("cancelButton").addEventListener("click", hideModal);
   document.getElementById("closeModalBtn").addEventListener("click", hideModal);
 
-
   function addMoodEntry() {
     fetch("{% url 'main:add_mood_entry_ajax' %}", {
       method: "POST",
@@ -196,7 +196,6 @@ refreshMoodEntries();
 
     document.getElementById("moodEntryForm").reset(); 
     document.querySelector("[data-modal-toggle='crudModal']").click();
-    
 
     return false;
   }
